<resources>
    <string name="app_name">Kitana</string>
    <string name="date_time">Date/Time</string>
    <string name="navigation_drawer_title">Kitana</string>
    <string name="local_date_and_time">Local Date and Time</string>
    <string name="date">Date:</string>
    <string name="local_date_and_time_select_date">Select Date</string>
    <string name="local_date_and_time_select_time">Select Time</string>
    <string name="local_date_and_time_utc">UTC:</string>
    <string name="local_date_and_time_julian_day">Julian Day:</string>
    <string name="local_date_and_time_update_date_time">Update Date/Time</string>
    <string name="local_date_and_time_local_time">Local Time:</string>
    <string name="local_date_and_time_use_current_time">Use Current Date/Time</string>

    <!-- ensures content starts after the app bar in vertical direction -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="moon_animation_text">Moon Animation</string>
    <string name="location">Location</string>
    <string name="local_date_and_time_siderial_time">Siderial Time:</string>

</resources>