<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.svenschmidt.kitana.viewmodel.DateTimeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DateTimeActivity">

        <TextView
            android:id="@+id/local_date_and_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/local_date_and_time"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/local_date_and_time_select_date"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/local_date_and_time_select_date"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/local_date_and_time_select_time"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/local_date_and_time_select_time"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/local_date_and_time_use_current_time"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/local_date_and_time_use_current_time"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/local_date_and_time_local_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/local_date_and_time_local_time" />

                <TextView
                    android:id="@+id/local_date_and_time_local_time_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@={viewmodel.localTime}"
                    android:textColor="@android:color/darker_gray"
                    tools:text="Local Time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/local_date_and_time_utc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/local_date_and_time_utc" />

                <TextView
                    android:id="@+id/local_date_and_time_utc_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@={viewmodel.utcTime}"
                    android:textColor="@android:color/darker_gray"
                    tools:text="UTC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/local_date_and_time_julian_day" />

                <TextView
                    android:id="@+id/local_date_and_time_julian_day_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@={viewmodel.julianDay}"
                    android:textColor="@android:color/darker_gray"
                    tools:text="Julian Day" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/divider_background" />

        <CheckBox
            android:id="@+id/local_date_and_time_update_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="@={viewmodel.updateDateTime}"
            android:onClick="@{() -> viewmodel.onUpdateDateTime()}"
            android:text="@string/local_date_and_time_update_date_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </LinearLayout>
</layout>
